objects/CEC__c.object
<CustomObject>
    <fields>
        <fullName>AENameLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Name lookup not used</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CEC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_Name__c</fullName>
        <formula>Opportunity__r.Account.Owner.FirstName  &amp;  Opportunity__r.Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE/Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOIPrimary__c</fullName>
        <label>Primary Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Back office efficiency</fullName>
                </value>
                <value>
                    <fullName>Call center modernization</fullName>
                </value>
                <value>
                    <fullName>Cloud contact center</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Customer experience</fullName>
                </value>
                <value>
                    <fullName>Mobile customer care</fullName>
                </value>
                <value>
                    <fullName>Mobile marketing</fullName>
                </value>
                <value>
                    <fullName>Multi-channel contact center</fullName>
                </value>
                <value>
                    <fullName>Self-service IVR</fullName>
                </value>
                <value>
                    <fullName>Social customer service</fullName>
                </value>
                <value>
                    <fullName>Speech / Text analytics</fullName>
                </value>
                <value>
                    <fullName>Web customer service</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization &amp; Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AOISecondary__c</fullName>
        <label>Secondary Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Back office efficiency</fullName>
                </value>
                <value>
                    <fullName>Call center modernization</fullName>
                </value>
                <value>
                    <fullName>Cloud contact center</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Customer experience</fullName>
                </value>
                <value>
                    <fullName>Mobile customer care</fullName>
                </value>
                <value>
                    <fullName>Mobile marketing</fullName>
                </value>
                <value>
                    <fullName>Multi-channel contact center</fullName>
                </value>
                <value>
                    <fullName>Self-service IVR</fullName>
                </value>
                <value>
                    <fullName>Social customer service</fullName>
                </value>
                <value>
                    <fullName>Speech / Text analytics</fullName>
                </value>
                <value>
                    <fullName>Web customer service</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization &amp; Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AOITertiary__c</fullName>
        <label>Tertiary Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Back office efficiency</fullName>
                </value>
                <value>
                    <fullName>Call center modernization</fullName>
                </value>
                <value>
                    <fullName>Cloud contact center</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Customer experience</fullName>
                </value>
                <value>
                    <fullName>Mobile customer care</fullName>
                </value>
                <value>
                    <fullName>Mobile marketing</fullName>
                </value>
                <value>
                    <fullName>Multi-channel contact center</fullName>
                </value>
                <value>
                    <fullName>Self-service IVR</fullName>
                </value>
                <value>
                    <fullName>Social customer service</fullName>
                </value>
                <value>
                    <fullName>Speech / Text analytics</fullName>
                </value>
                <value>
                    <fullName>Web customer service</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization &amp; Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Approved Visit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account_lk__r.Owner.Full_Name__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account_Name_Custom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_lk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CX Center Visits</relationshipLabel>
        <relationshipName>CX_Center_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Center_Information__c</fullName>
        <label>Additional Background Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Opportunity_within_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Opportunity within Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agenda_Topics__c</fullName>
        <label>Agenda Topics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Visit_End_Date__c</fullName>
        <label>Approved Visit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Persona__c</fullName>
        <label>Buyer Persona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bob - Operations Manager/Director/IT Strategic Planning/Business Process</fullName>
                </value>
                <value>
                    <fullName>Carl - Call Center Manager/Director</fullName>
                </value>
                <value>
                    <fullName>Carl Jr - Call Center Engineer/Architect/Analyst</fullName>
                </value>
                <value>
                    <fullName>Charles - CEO/President/Owner/GM (of SMB)</fullName>
                </value>
                <value>
                    <fullName>Edith Jr - Customer Service/Experience Director/Manager</fullName>
                </value>
                <value>
                    <fullName>Edith - VP Customer Service/Experience</fullName>
                </value>
                <value>
                    <fullName>Eric Jr - IT Director / Manager</fullName>
                </value>
                <value>
                    <fullName>Eric - Office of: CIO/CTO/VP of IT/IT Architect/IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Frank - CFO/Purchasing Manager</fullName>
                </value>
                <value>
                    <fullName>John - CEO/Business Unit Head/Division Head/LOB VP</fullName>
                </value>
                <value>
                    <fullName>Nancie - Non Persona</fullName>
                </value>
                <value>
                    <fullName>Raul - Researching Business or IT Analyst/Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEC_Request_Date_Option_1__c</fullName>
        <inlineHelpText>List 3 in order of preference</inlineHelpText>
        <label>CXC Request Date Option 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEC_Request_Date_Option_2__c</fullName>
        <inlineHelpText>List 3 in order of preference</inlineHelpText>
        <label>CXC Request Date Option 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEC_Request_Date_Option_3__c</fullName>
        <inlineHelpText>List 3 in order of preference</inlineHelpText>
        <label>CXC Request Date Option 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_engagement_with_our_messaging__c</fullName>
        <description>Why would our client care or engage with our message?</description>
        <inlineHelpText>Why would our client care or engage with our message?</inlineHelpText>
        <label>Client engagement with our messaging</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Background__c</fullName>
        <inlineHelpText>Share any relevant information on the Company in general.</inlineHelpText>
        <label>Company Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition1__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.Competitor__c, &quot;AASTRA TELECOM&quot; ), &quot;AASTRA TELECOM; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;ALCATEL-LUCENT&quot; ), &quot;ALCATEL-LUCENT; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;ALTIGEN&quot; ), &quot;ALTIGEN; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;ALTITUDE&quot; ), &quot;ALTITUDE; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;ASPECT&quot; ), &quot;ASPECT; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;ATG&quot; ), &quot;ATG; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;AVAYA&quot; ), &quot;AVAYA; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;CALABRIO&quot; ), &quot;CALABRIO; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;CALL MINER&quot; ), &quot;CALL MINER; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;CALLCOPY&quot; ), &quot;CALLCOPY; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;CISCO&quot; ), &quot;CISCO; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;CLARITY CONNECT&quot; ), &quot;CLARITY CONNECT; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;CONSONA&quot; ), &quot;CONSONA; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;CONTRACTUAL&quot; ), &quot;CONTRACTUAL; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;CONVERGYS&quot; ), &quot;CONVERGYS; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;EGAIN&quot; ), &quot;EGAIN; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;EPTICA&quot; ), &quot;EPTICA; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;FILENET&quot; ), &quot;FILENET; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;FIVE9&quot; ), &quot;FIVE9; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;HUAWEI&quot; ), &quot;HUAWEI; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;INCONTACT&quot; ), &quot;INCONTACT; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;IN-HOUSE DEVELOPED SOLUTION&quot; ), &quot;IN-HOUSE DEVELOPED SOLUTION; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;INVISION&quot; ), &quot;INVISION; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;KANA/LAGAN&quot; ), &quot;KANA/LAGAN; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;LIVEOPS&quot; ), &quot;LIVEOPS; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;LIVEPERSON&quot; ), &quot;LIVEPERSON; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;LIVEVOX&quot; ), &quot;LIVEVOX; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;MICROSOFT&quot; ), &quot;MICROSOFT; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;MITEL&quot; ), &quot;MITEL; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;MOXIE SOFTWARE&quot; ), &quot;MOXIE SOFTWARE; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;NEC&quot; ), &quot;NEC; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;NEXIDIA&quot; ), &quot;NEXIDIA; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;NICE&quot; ), &quot;NICE; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;NOBLE SYSTEMS&quot; ), &quot;NOBLE SYSTEMS; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;NUANCE&quot; ), &quot;NUANCE; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;ORACLE/RIGHTNOW&quot; ), &quot;ORACLE/RIGHTNOW; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;OTHER / CLOUD BASED VENDOR&quot; ), &quot;OTHER/CLOUD BASED VENDOR; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;OTHER / BPM-BPR VENDOR&quot; ), &quot;OTHER/BPM-BPR VENDOR; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;OTHER / PRIMARILY UC VENDOR&quot; ), &quot;OTHER / PRIMARILY UC VENDOR; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;OTHER / LOCAL SOFTWARE VENDOR&quot; ), &quot;OTHER / LOCAL SOFTWARE VENDOR; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;OTHER / SINGLE CHANNEL VENDOR&quot; ), &quot;OTHER / SINGLE CHANNEL VENDOR; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;OTHER / WEB CHANNEL OR SOCIAL VENDOR&quot; ), &quot;OTHER / WEB CHANNEL OR SOCIAL VENDOR; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;PARATURE&quot; ), &quot;PARATURE; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competition1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition2__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.Competitor__c, &quot;PEGASYSTEMS INC&quot; ), &quot;PEGASYSTEMS INC; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;INTERACTIVE INTELLIGENCE&quot; ), &quot;INTERACTIVE INTELLIGENCE; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;PIPKINS&quot; ), &quot;PIPKINS; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;PRAIRIEFYRE&quot; ), &quot;PRAIRIEFYRE; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;SALESFORCE.COM&quot; ), &quot;SALESFORCE.COM; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;SAP&quot; ), &quot;SAP; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;SHORETEL&quot; ), &quot;SHORETEL; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;SIEBEL&quot; ), &quot;SIEBEL; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;SIEMENS&quot; ), &quot;SIEMENS; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;SYNTELLECT/COSMOCOM (ENGHOUSE)&quot; ), &quot;SYNTELLECT/COSMOCOM(ENGHOUSE); &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;TALISMA&quot; ), &quot;TALISMA; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;TECHNOVOZ&quot; ), &quot;TECHNOVOZ; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;TELEOPTI&quot; ), &quot;TELEOPTI; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;TOUCHCOMMERCE&quot; ), &quot;TOUCHCOMMERCE; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;TRANSERA&quot; ), &quot;TRANSERA; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;VERINT&quot; ), &quot;VERINT; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;VOCALCOM&quot; ), &quot;VOCALCOM; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;VOLTDATA&quot; ), &quot;VOLTDATA; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;VOXEO&quot; ), &quot;VOXEO; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;VOXTRON&quot; ), &quot;VOXTRON; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;ZEACOM&quot; ), &quot;ZEACOM; &quot;,null)&amp;
IF(INCLUDES(Opportunity__r.Competitor__c, &quot;NONE&quot; ), &quot;NONE; &quot;,null)</formula>
        <label>Competition2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CEC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY())+MONTH(TODAY())+DAY(TODAY())+ VALUE( MID( TEXT( TODAY() - 7 ), 12, 2 )))</defaultValue>
        <description>The default value formula generates a unique autonumber (converted to text since this is a text field) every time depending on the current date and time. But, this can be overridden by any user having edit access</description>
        <label>Cost Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Genesys_Software__c</fullName>
        <inlineHelpText>What Genesys Software do they currently have and how is it deployed?</inlineHelpText>
        <label>Current Genesys Software</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_objective__c</fullName>
        <label>Customer objective of the visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Background__c</fullName>
        <label>Deal Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <label>Deal Size</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_time_frame__c</fullName>
        <label>Purchase Decision time frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 month</fullName>
                </value>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>&gt;2 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Notes__c</fullName>
        <description>DL 3/8/19 Requested by Monika Negi</description>
        <label>Demo Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Status__c</fullName>
        <description>DL 3/8/19 Requested by Monika Negi</description>
        <label>Demo Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demos_Required__c</fullName>
        <label>Demos Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect</fullName>
                </value>
                <value>
                    <fullName>PureEngage</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dress_Code__c</fullName>
        <inlineHelpText>Outline appropriate dress code for Genesys attendees</inlineHelpText>
        <label>Dress Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_deal_size_after_visit__c</fullName>
        <inlineHelpText>Numeric Value Only.</inlineHelpText>
        <label>Expected deal size after visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_deal_size_before_visit__c</fullName>
        <formula>Opportunity__r.ExpectedRevenue</formula>
        <label>Expected deal size before visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <formula>TEXT(Contact_Name__r.Function__c)</formula>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Game_Stage__c</fullName>
        <inlineHelpText>Expected post visit GAME stage</inlineHelpText>
        <label>oldGAME Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage 1: MI: 1, or MI 2</fullName>
                </value>
                <value>
                    <fullName>Stage 2: MI 3, or MI 4, or MI 5</fullName>
                </value>
                <value>
                    <fullName>Stage 3: MI 6 only</fullName>
                </value>
                <value>
                    <fullName>Stage 4: MI 7, or MI 8</fullName>
                </value>
                <value>
                    <fullName>Stage 5: MI 9, or MI 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Game_Stage_opp__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <inlineHelpText>Current GAME Stage in Opportunity</inlineHelpText>
        <label>GAME Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Attendees__c</fullName>
        <label>Genesys Attendees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Genesys_Execs_met_before__c</fullName>
        <label>Genesys Execs met before</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Genesys_objective__c</fullName>
        <description>This visit is a part of the broader global corporate narrative that will serve as an anchor 
for all communications. Our company positioning will serve as the foundation: 
The Genesys Customer Experience Platform powers optimal customer journeys consistently across all touch points, channels and interactions to turn customers into brand advocates.</description>
        <label>Genesys objective of the visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <description>How might value proposition influence other communication strategies or strategic partnerships?</description>
        <inlineHelpText>For the CEC, can the content we develop be optimized and leveraged for Genesys social and digital channels?</inlineHelpText>
        <label>Influence of communication strategies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issues_Concerns__c</fullName>
        <label>Issues/Concerns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leading_Theme__c</fullName>
        <label>Leading Theme</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collections Digital Outbound</fullName>
                </value>
                <value>
                    <fullName>Journey Management</fullName>
                </value>
                <value>
                    <fullName>Mobile Engagement for Service</fullName>
                </value>
                <value>
                    <fullName>Omni Channel Desktop</fullName>
                </value>
                <value>
                    <fullName>Online Chat for Sales</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <formula>Opportunity__r.License_Amount__c</formula>
        <label>License</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>CXC Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Daly City</fullName>
                </value>
                <value>
                    <fullName>Frimley</fullName>
                </value>
                <value>
                    <fullName>Indianapolis</fullName>
                </value>
                <value>
                    <fullName>Markham</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>Sao Paolo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_End_Time__c</fullName>
        <label>Meeting End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Start_Time__c</fullName>
        <label>Meeting Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>